# rusty-blog

./: Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js
src/: app.rs  constants.rs  main.rs  output.css  router.rs
src/component/: mod.rs  note.rs
src/components/: error.rs  index.rs  mod.rs  navbar.rs  note.rs  note_input.rs  offcanvas.rs  test.rs  utils.rs
src/components/api/: api_error.rs  constants.rs  mod.rs
src/components/note/: mod.rs  note_form.rs  note_index.rs
src/components/note/form_components/: textarea.rs
src/components/note_form/: mod.rs  text_input.rs  textarea.rs
src/components/note_stuff/: mod.rs  note_form copy.rs  note_form.rs  note_index.rs  note_list.rs  note_model.rs
src/components/note_stuff/form_components/: button_new.rs  mod.rs
src/model/: Blog.rs  User.rs
src/view/: login.rs
