[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
chrono = "0.4" # Datetime
tokio = "1.21.1" # Async
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = "1.0.145" # Deserialization
serde_json = "1.0.85" # JSON 
gloo-console = "0.2.3" # Log console