[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
chrono = "0.4" # Datetime
tokio = "1.21.1" # Async
serde = "1.0.145" # Deserialization
serde_json = "1.0.85" # JSON 
gloo-console = "0.2.3" # Log console
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
reqwasm = "0.5.0"
serde_with = "2.0.1"
